# UAV-phase1

./: NTU_ST_UAV_P1.rviz  README.md  ST_UAV.launch  ST_UAV_debugging.launch  ST_UAV_demo.launch  laserscan_debugging.rviz
depth_to_line_extraction/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  serial4ST.cpp  serial4ST.hpp
depth_to_line_extraction/src/: depth_to_line_extraction.cpp~  depth_to_line_extraction_Haibo.cpp~  depth_to_line_extraction_node.20160728  depth_to_line_extraction_node.before_coordinate_change  depth_to_line_extraction_node.cpp  depth_to_line_extraction_node.cpp~  depth_to_line_extraction_node.previous  depth_to_line_extraction_node.previous2
stereo_disparity/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
stereo_disparity/src/: stereo_disparity.combine  stereo_disparity.cpp  stereo_disparity.cpp~
ueye/: CMakeLists.txt  CMakeLists.txt~  README.md  Readme  Readme~  ST_UAV.launch  ST_UAV_ueye.launch  package.xml
ueye/include/: ueye_camera.h
ueye/include/disparity/: ueye_camera.h
ueye/include/ueye/: ueye_exceptions.h
ueye/src/: ueye_camera.cpp  ueye_camera.cpp~  ueye_exceptions.cpp  ueye_exceptions.cpp~  ueye_node.cpp  ueye_node.cpp~
ueye/src/others/: ueye_camera.backup  ueye_node.calib  ueye_node.raw_image
